update docs sidebar list styling and remove tauri icons from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,9 @@ dist-ssr
 # Tauri
 src-tauri/target
 src-tauri/gen
-src-tauri/icons/*.png
-src-tauri/icons/*.icns
-src-tauri/icons/*.ico
+# src-tauri/icons/*.png
+# src-tauri/icons/*.icns
+# src-tauri/icons/*.ico
 
 # Editor directories and files
 .vscode/*
