--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,9 @@ walkdir = "2.4"
 base64 = "0.21"
 sysinfo = "0.30"
 dirs = "5.0"
+zip = "0.6"
+tauri-plugin-opener = "2"
+tauri-plugin-deep-link = "2"
 
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
