--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,8 @@ dirs = "5.0"
 zip = "0.6"
 tauri-plugin-opener = "2"
 tauri-plugin-deep-link = "2"
+warp = "0.3"
+once_cell = "1"
 
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
